force-app/main/default/objects/Schedule_Item__c/Schedule_Item__c.object-meta.xml
<CustomObject>
    <description>Represents an individual item within a schedule.</description>
    <label>Schedule Item</label>
    <nameField>
        <displayFormat>IS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>