force-app/main/default/objects/Schedule_Item__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>The duration of the schedule item in hours or minutes</description>
    <inlineHelpText>Enter the estimated duration for the procedure or service</inlineHelpText>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>