force-app/main/default/objects/Schedule_Item__c/fields/Procedure__c.field-meta.xml
<CustomField>
    <fullName>Procedure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Refers to the procedure related to this schedule item</description>
    <inlineHelpText>This field links to a product (procedure) that is associated with the item in the schedule</inlineHelpText>
    <label>Procedure</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Schedule Items</relationshipLabel>
    <relationshipName>Schedule_Items</relationshipName>
    <type>Lookup</type>
</CustomField>