force-app/main/default/objects/Schedule_Item__c/validationRules/procedure_active_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>procedure_active_validation</fullName>
    <active>true</active>
    <description>This rule ensured that if the program is not active, it cannot be selected as a scheduling item.</description>
    <errorConditionFormula>IF(AND(Procedure__r.IsActive = TRUE, NOT(ISBLANK(Procedure__c))), FALSE, TRUE)</errorConditionFormula>
    <errorMessage>This procedure cannot be selected as it is not activated.</errorMessage>
</ValidationRule>